# tshock-web-console

./: Cargo.toml  LICENSE  README.md  Settings.toml
src/: cfg.rs  lib.rs  main.rs
src/http/: client.rs  server.rs
static/: index.html
static/css/: app.049b76d5.css
static/js/: app.4911b125.js  app.4911b125.js.map  chunk-vendors.7b6312c6.js  chunk-vendors.7b6312c6.js.map
webui/: package.json  vue.config.js
webui/public/: index.html
webui/src/: App.vue
webui/src/components/: LayoutContent.vue
