[package]
name = "tshock-web-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
lazy_static = "*"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.1"
tokio-util = "*"
tokio-tungstenite = "*"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4"
url = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "*"